--- a/focus.html
+++ b/focus.html
@@ -1,14 +1,18 @@
 <html>
+    <head>
+        <title>Focus - Doomscrolling Tracker</title>
+    </head>
+
     <body>
         <h1>Focus - Doomscrolling timer</h1>
 
         <form action="focus.js">
             <label>Doomscroll watchlist:</label>
-            <input type="text" id="website_to_track">
-            <button type="button" onclick="add_tracked_website()">Add Website</button>
+            <input type="text" id="website-to-track">
+            <button type="button" onclick="addTrackedWebsite()">Add Website</button>
         </form>
 
-        <ul>Tracked Websites</ul>
+        <ul id="tracked-websites-list">Tracked Websites</ul>
         <script src="focus.js"></script>
     </body>
 </html>
