added website url trimming, moved add website button event listener to focus.js, added some psuedocode for the isDoomscrollingWebsite function

--- a/focus.html
+++ b/focus.html
@@ -6,11 +6,9 @@
     <body>
         <h1>Focus - Doomscrolling timer</h1>
 
-        <form action="focus.js">
-            <label>Doomscroll watchlist:</label>
-            <input type="text" id="website-to-track">
-            <button type="button" onclick="addTrackedWebsite()">Add Website</button>
-        </form>
+        <label>Doomscroll watchlist:</label>
+        <input type="text" id="website-to-track">
+        <button type="button" id="add-website-button">Add Website</button>
 
         <ul id="tracked-websites-list">Tracked Websites</ul>
         <script src="focus.js"></script>
