added abiliity to clear local storage, clears internal arrays and html children of ul parent element

--- a/focus.html
+++ b/focus.html
@@ -11,6 +11,8 @@
         <button type="button" id="add-website-button">Add Website</button>
 
         <ul id="tracked-websites-list">Tracked Websites</ul>
+
+        <button type="button" id="clear-website-list">Clear Websites</button>
         <script src="focus.js"></script>
     </body>
 </html>
