separated code into popup.js and background.js, communicating through chrome runtime messaging.

--- a/focus.html
+++ b/focus.html
@@ -13,6 +13,6 @@
         <ul id="tracked-websites-list">Tracked Websites</ul>
 
         <button type="button" id="clear-website-list">Clear Websites</button>
-        <script src="focus.js"></script>
+        <script src="popup.js"></script>
     </body>
 </html>
