changed input box id, added the sendDoomscrollingList function for popup.js and focus.html to reflect the changes in background.js

--- a/focus.html
+++ b/focus.html
@@ -8,7 +8,7 @@
     <h1>Focus - Doomscrolling timer</h1>
 
     <label>Doomscroll watchlist:</label>
-    <input type="text" id="website-to-track">
+    <input type="text" id="new-website-input-box">
     <button type="button" id="add-website-button">Add Website</button>
 
     <ul id="tracked-websites-list">Tracked Websites</ul>
